@startuml

title __APP's Class Diagram__\n

  namespace com.cleanup.todoc {
    class com.cleanup.todoc.BuildConfig {
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      abstract class com.cleanup.todoc.database.TodocDatabase {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      class com.cleanup.todoc.database.TodocDatabase_Impl {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      class com.cleanup.todoc.database.TodocDatabase_Impl {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      namespace dao {
        interface com.cleanup.todoc.database.dao.ProjectDao {
        }
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      namespace dao {
        class com.cleanup.todoc.database.dao.ProjectDao_Impl {
        }
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      namespace dao {
        class com.cleanup.todoc.database.dao.ProjectDao_Impl {
        }
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      namespace dao {
        interface com.cleanup.todoc.database.dao.TaskDao {
        }
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      namespace dao {
        class com.cleanup.todoc.database.dao.TaskDao_Impl {
        }
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      namespace dao {
        class com.cleanup.todoc.database.dao.TaskDao_Impl {
        }
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace injections {
      class com.cleanup.todoc.injections.Injection {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace injections {
      class com.cleanup.todoc.injections.ViewModelFactory {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Project {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.ProjectDataRepository {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.TaskDataRepository {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.MainActivity {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.TaskViewModel {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.TasksAdapter {
      }
    }
  }
  

  com.cleanup.todoc.database.TodocDatabase -up-|> android.arch.persistence.room.RoomDatabase
  com.cleanup.todoc.database.TodocDatabase_Impl -up-|> com.cleanup.todoc.database.TodocDatabase
  com.cleanup.todoc.database.TodocDatabase_Impl o-- com.cleanup.todoc.database.dao.ProjectDao : _projectDao
  com.cleanup.todoc.database.TodocDatabase_Impl o-- com.cleanup.todoc.database.dao.TaskDao : _taskDao
  com.cleanup.todoc.database.TodocDatabase_Impl -up-|> com.cleanup.todoc.database.TodocDatabase
  com.cleanup.todoc.database.TodocDatabase_Impl o-- com.cleanup.todoc.database.dao.ProjectDao : _projectDao
  com.cleanup.todoc.database.TodocDatabase_Impl o-- com.cleanup.todoc.database.dao.TaskDao : _taskDao
  com.cleanup.todoc.database.dao.ProjectDao_Impl .up.|> com.cleanup.todoc.database.dao.ProjectDao
  com.cleanup.todoc.database.dao.ProjectDao_Impl .up.|> com.cleanup.todoc.database.dao.ProjectDao
  com.cleanup.todoc.database.dao.TaskDao_Impl .up.|> com.cleanup.todoc.database.dao.TaskDao
  com.cleanup.todoc.database.dao.TaskDao_Impl .up.|> com.cleanup.todoc.database.dao.TaskDao
  com.cleanup.todoc.injections.ViewModelFactory .up.|> android.arch.lifecycle.ViewModelProvider.Factory
  com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource
  com.cleanup.todoc.repositories.ProjectDataRepository o-- com.cleanup.todoc.database.dao.ProjectDao : projectDao
  com.cleanup.todoc.repositories.TaskDataRepository o-- com.cleanup.todoc.database.dao.TaskDao : taskDao
  com.cleanup.todoc.ui.MainActivity .up.|> com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
  com.cleanup.todoc.ui.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.TasksAdapter : adapter
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.MainActivity.SortMethod : sortMethod
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.TaskViewModel : taskViewModel
  com.cleanup.todoc.ui.TaskViewModel -up-|> android.arch.lifecycle.ViewModel
  com.cleanup.todoc.ui.TaskViewModel o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.ui.TaskViewModel o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource
  com.cleanup.todoc.ui.TasksAdapter -up-|> android.support.v7.widget.RecyclerView.Adapter
  com.cleanup.todoc.ui.TasksAdapter o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
